--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ oke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2" viewBox="0
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="fw-light">Fisica y Simulacion</h1>
+          <p class="lead text-muted">Maximiliano Stephan Meza Camargo </p>
         <p class="lead text-muted">&#128165&#128165&#128165Archi requete recontra Proyectos&#128165&#128165&#128165 </p>
        
       </div>
@@ -197,4 +198,5 @@ oke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2" viewBox="0
 </body>
 
 </html>
+
 
